// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Number UU5.Bricks.Number - onChange props() 1`] = `
<Number
  id="uuID"
  onChange={[Function]}
  value={5223.65663}
/>
`;

exports[`UU5.Bricks.Number className="my-classname" 1`] = `
<span
  className="uu5-bricks-number my-classname uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number controlled=false 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number controlled=true 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number decimalSeparator=" " 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658 14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number decimalSeparator="," 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658,14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number decimalSeparator="." 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number default props 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number disabled=false 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number disabled=true 1`] = `
<span
  className="uu5-bricks-number uu5-common-disabled uu5-bricks-number-positive"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "225,658.14522",
      }
    }
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Number hidden=false 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number hidden=true 1`] = `
<span
  className="uu5-bricks-number uu5-common-hidden uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number id="myId" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number mainAttrs=undefined 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number maxDecimalLength=5 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number minDecimalLength=10 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.1452200000",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number name="myName" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="bigBox" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="bigBoxCollection" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="box" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="boxCollection" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="container" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="inline" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="page" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="smallBox" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="smallBoxCollection" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number nestingLevel="spa" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number noIndex=false 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number noIndex=true 1`] = `
<span
  className="uu5-bricks-number uu5-noindex uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number pureRender=false 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number pureRender=true 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number rounded=-2 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.15",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number rounded=-5 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number rounded=0 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number selected=false 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number selected=true 1`] = `
<span
  className="uu5-bricks-number uu5-common-selected uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number style="padding:8px; borderRadius: 2px" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Number style={"backgroundColor":"red","color":"blue"} 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Number thousandSeparator=" " 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225 658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number thousandSeparator="," 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number thousandSeparator="." 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225.658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Number tooltip="My Tooltip" 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.Number value=225658.14522 1`] = `
<span
  className="uu5-bricks-number uu5-bricks-number-positive"
  dangerouslySetInnerHTML={
    Object {
      "__html": "225,658.14522",
    }
  }
  id="uuID"
  style={Object {}}
  title={null}
/>
`;
